--- a/wp-content/themes/lumenity/css/main.css
+++ b/wp-content/themes/lumenity/css/main.css
@@ -1,6 +1,6 @@
 /* Css */
 body {
-	background-color: #f3f3f3;
+	background-color: #e9f4fc;
 	color: #2f3239;
 	-webkit-font-smoothing: antialiased;
 	overflow-x: hidden;
